--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <kotlin.version>1.0.5-2</kotlin.version>
-        <tornadofx.version>1.6.1-SNAPSHOT</tornadofx.version>
+        <tornadofx.version>1.6.1</tornadofx.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
